# dratio-python

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: api.rst  conf.py  index.rst
dratio/: __init__.py  __version__.py  base.py  client.py  dataset.py  exceptions.py  io.py  utils.py
dratio/models/: __init__.py  base.py  dataset.py  dataset_file.py  dataset_version.py  feature.py  license.py  mixins.py  publisher.py  tags.py
dratio/provider/: file_upload.py  helper_dataset.py  provider_utils.py
dratio/resources/: __init__.py  base.py  category.py  dataset.py  dataset_file.py  dataset_version.py  feature.py  license.py  publisher.py
tests/: test_basics.py
