[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dratio"
description = "Python client library for dratio.io API Web services"
authors = [{name="dratio.io", email="info@dratio.io"}]
license = { file = "LICENSE" }
readme = "file: README.md"
version = "0.0.11"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Sociology",
]

[project.urls]
homepage = "https://dratio.io"
repository = "https://github.com/dratio-io/dratio-python"
documentation = "https://dratio.readthedocs.io/"


[options]
packages = ["dratio"]
install_requires = [
    "requests",
    "pandas>=0.21.1",
    "pyarrow",
    "typing_extensions; python_version<'3.8'",
]
python_requires = ">=3.7"

[options.extras_require]
geo = [
    "geopandas>=0.8",
]
