[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dratio"
description = "Python client library for dratio.io API Web services"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
dynamic = ["version", "readme"]
dependencies = [
    "requests",
    "pandas>=0.21.1",
    "pyarrow",
    "typing_extensions; python_version<'3.8'",
]
authors = [
    {name="dratio.io", email="info@dratio.io"}
]
maintainers = [
    {name="dratio.io", email="info@dratio.io"}
]
keywords = [
    "dratio",
    "API",
    "client",
    "data",
    "web services",
    "pandas",
    "geopandas",
    "data analysis",
    "geospatial",
    "demographics",
    "marketing",
    "income",
    "consumption",
    "GIS",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Sociology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
geo = [
    "geopandas>=0.8",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
]


[project.urls]
homepage = "https://dratio.io"
repository = "https://github.com/dratio-io/dratio-python"
documentation = "https://dratio.readthedocs.io/"


[tool.setuptools.packages.find]
include = ["dratio*"]

[tool.setuptools.dynamic]
version = {attr = "dratio.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}